# 250_The_AI_Job

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  audit_report.md  docker-compose.yml  docker_logs.txt  implementation_plan.md  package-lock.json  package.json  research_poc.py  setup_db.py
.agent/rules/: ceo.md  dev-guide-agent.md  index.md  operational-context.md
apps/agent-runtime/: .flake8  Dockerfile  README.md  pyproject.toml  ruff.toml
apps/agent-runtime/src/agent_runtime/: __init__.py  graph.py  main.py  settings.py  types.py
apps/agent-runtime/src/agent_runtime/api/: routes.py
apps/agent-runtime/src/agent_runtime/api/routers/: tasks.py
apps/agent-runtime/src/agent_runtime/graph/: graph.py
apps/agent-runtime/src/agent_runtime/graph/nodes/: execution.py  gates.py  planning.py  test_evaluator.py  test_executor.py  test_planner.py
apps/agent-runtime/src/agent_runtime/schemas/: state.py
apps/agent-runtime/src/agent_runtime/schemas/api/: problem_detail.py  tasks.py
apps/agent-runtime/src/agent_runtime/utils/: logger.py  telemetry.py
apps/agent-runtime/tests/: conftest.py  test_graph.py  test_legacy.py  test_synthetic_qa.py  verify_docker_playwright.py
constitution/: ARCHITECTURAL_DECISIONS.md  CEO_DOCKER_PROTOCOL.md  CLAUDE.md  ENGINE_ARCHITECTURE_V1.md  EXECUTION_PROTOCOL_SPEC.md  GOLDEN_RULES.md  NOVEMBER_2025_STANDARDS.md  OPERATIONAL_CONTEXT.md  ROADMAP_SPEC.md  STATE_MANAGEMENT.md  STRATEGY.md  VISION.md  comprehensive_log.md  session_summary.md
docs/: ARCHITECTURAL_DECISIONS.md
evidence/: README.md  api_versioning.json  constitutional_audit_matrix.md  constitutional_contradictions.md  containers_healthy.txt  docker_logs.txt  error_format.json  file_structure.txt  type_check.txt
openapi/: yfe-api-v1.yaml
(+72 files in other folders)
